--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,9 @@
 :root {
     --white-color: #EFEFEF;
-    --dark-blue: #011638;
-    --light-blue: #4056F4;
-    --orange: #DA7422;
-    --gray: #788475;
+    --dark-blue: #021b42;
+    --light-blue: #2034cc;
+    --orange: #da7422;
+    --gray: #757784;
     --logo-font: 'Segoe UI';
 }
 
@@ -19,9 +19,117 @@ html {
 
 body {
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    width:100vw;
+}
+
+.main {
+    width:100vw;
+    min-height:100vh;
+}
+
+.welcome-section {
+    background-color: var(--dark-blue);
+    padding:20px 0 0;
+    overflow: hidden;
+}
+
+.squarrell-left {
+    margin-bottom: 20px;
+}
+
+.squarrell-left-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.squarrell__logo {
+    width:50px;
+    height:50px;
+    margin-right: 5px;
+}
+
+.squarrell__title {
+    font-family: var(--logo-font);
+    font-size:3.5rem;
+    font-weight: bold;
+    font-style: italic;
+    color:var(--white-color);
+}
+
+.squarrell__description {
+    font-size:1.6rem;
+    color:var(--gray);
+    text-align: center;
+    padding:0 15px;
+}
+
+.squarrell-right {
+    display:grid;
+    height:fit-content;
+    width:90%;
+    margin:0 auto;
+    grid-template-columns: minmax(0px, 1fr) repeat(3, minmax(80px, 120px)) minmax(0px, 1fr);
+    grid-template-rows: repeat(2, 70px);
+    grid-template-areas:"izqarr medarr derarr"
+                        "izqmed medmed dermed"
+                        "izqabj medabj derabj";
+}
+
+.squarrell-right__img1 {
+    background-image: url("https://i.imgur.com/KLxmcMF.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    min-width:100px;
+    min-height:100px;
+    grid-column: 3 / 4;
+    grid-row:2 / 3;
+}
+
+.squarrell-right__img2 {
+    background-image: url("https://i.imgur.com/Jbk0zGV.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    min-width:100px;
+    min-height:110px;
+    grid-column: 2 / 3;
+    grid-row:1 / 2;
+}
+
+.squarrell-right__img3 {
+    background-image: url("https://i.imgur.com/TNXBbut.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    min-width:100px;
+    min-height:100px;
+    grid-column: 4 / 5;
+    grid-row:1 / 2;
+}
+
+.button {
+    width:110px;
+    height:40px;
+    background-color: var(--orange);
+    border:0px;
+    color:#0f0f0f;
+    border-radius: 10px;
+    font-weight: bold;
+    padding:0 4px;
+    position:relative;
+    top:20px;
+    left:calc(50% - 55px);
+}
+
+.button:hover {
+    color:#EFEFEF;
+    box-shadow: 0px 2px 10px 5px rgba(218, 116, 34, 0.6);
 }
 
 img {
-    width:100px;
-    height:100px;
+    width:50px;
+    height:50px
 }
