--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,12 @@
 :root {
     --white-color: #EFEFEF;
     --dark-blue: #021b42;
-    --light-blue: #2034cc;
+    --light-blue: #567ec9;
     --orange: #da7422;
-    --gray: #757784;
+    --gray: #2a2a2b;
+    --black: #0f0f0f;
+    --light-gray:#b1b3b9;
+    --super-light-gray:#d8d7d7;
     --logo-font: 'Segoe UI';
 }
 
@@ -29,7 +32,7 @@ body {
 
 .welcome-section {
     background-color: var(--dark-blue);
-    padding:20px 0 0;
+    padding:20px 20px 0;
     overflow: hidden;
 }
 
@@ -60,7 +63,7 @@ body {
 
 .squarrell__description {
     font-size:1.6rem;
-    color:var(--gray);
+    color:var(--white-color);
     text-align: center;
     padding:0 15px;
 }
@@ -111,14 +114,18 @@ body {
 }
 
 .button {
+    display: inline-block;
     width:110px;
     height:40px;
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 40px;
     background-color: var(--orange);
     border:0px;
-    color:#0f0f0f;
+    color:var(--white-color);
     border-radius: 10px;
     font-weight: bold;
-    padding:0 4px;
+    padding:0 10px;
     position:relative;
     top:20px;
     left:calc(50% - 55px);
@@ -126,10 +133,141 @@ body {
 
 .button:hover {
     color:#EFEFEF;
-    box-shadow: 0px 2px 10px 5px rgba(218, 116, 34, 0.6);
+    box-shadow: 0px 2px 10px 5px rgba(200, 106, 44, 0.6);
+}
+
+.second-section {
+    background-color: var(--light-blue);
+    padding:20px;
+    width:100%;
+}
+
+.second-section__title{
+    color:var(--black);
+    text-align: center;
+    font-weight: bold;
+    font-size:1.6rem;
+    margin-bottom:10px;
+}
+
+.second-section__paragraph {
+    color:var(--black);
+    text-align: justify;
+    padding:0 5px;
+    font-size:1.3rem;
+    line-height: 1.7rem;
+    margin-bottom: 5px;
+}
+
+.second-section__creator {
+    display: block;
+    margin-top:10px;
+    color:var(--gray);
+    font-size:1.2rem;
+    text-align: center;
+    font-weight: bold;
+}
+
+.second-section__creator-span {
+    font-weight: normal;
+    color:var(--gray);
+}
+
+.solutions-section {
+    background-color: var(--super-light-gray);
+    display: flex;
+    flex-direction: column;
+    padding:20px;
+    width:100%;
+}
+
+.solutions-section__a {
+    text-decoration: none;
+}
+
+.solutions-section__div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    width:100%;
+    max-width: 300px;
+    height:150px;
+    padding:10px;
+    background-color: white;
+    margin: 10px auto;
+    border:3px solid var(--dark-blue);
+    border-top: 6px solid var(--dark-blue);
+    border-radius: 20px 20px 10px 10px;
+}
+
+.solutions-section__div:hover{
+    box-shadow: 1px 4px 15px 5px rgba(2, 27, 66, 0.4);
+}
+
+.solutions-section__title {
+    font-size:1.6rem;
+    color:var(--dark-blue);
+    margin-bottom: 5px;
+}
+
+.solutions-section__paragraph {
+    font-size:1.3rem;
+    color:var(--gray);
+    text-align: end;
+    margin-bottom: 5px;
+}
+
+.solutions-section__img {
+    width:80px;
+}
+
+.solutions-section__img1 {
+    width:70px;
+}
+
+.disclaimer-section {
+    background-color: var(--light-blue);
+    width:100%;
+    padding:20px;
+}
+
+.disclaimer-section__title {
+    font-size:1.6rem;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.disclaimer-section__paragraph {
+    font-size:1.3rem;
+    text-align: justify;
+}
+
+.creator {
+    display: flex;
+    padding:20px;
+}
+
+.creator-left {
+    padding-right: 10px;
+}
+
+.creator-left__title {
+    font-size:1.6rem;
+    margin-bottom: 5px;
+}
+
+.creator-left__presentation {
+    font-size:1.1rem;
+    text-align: justify;
+}
+
+.creator-right__image {
+    width:40px;
+    height:40px;
+    margin-bottom: 5px;
 }
 
 img {
     width:50px;
-    height:50px
 }
